-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    4.0b3

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2010 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.0b3
-------------------

5/5/10
    - Added RETURN_RAW_DER option to control when OPF solver returns
      constraint, Jacobian and objective function gradient and Hessian
      information.

5/4/10
    - Refactored portions of opf() into opf_setup() and opf_execute().


Changes since 4.0b2
-------------------

4/19/10
    - Released version 4.0b3.
    - Changed licensing to GNU General Public license. See LICENSE and
      COPYING files for details.
    - Added in extras sub-directory psse2matpower Perl script for
      converting PSS/E data files to MATPOWER case files.

4/6/10
    - Added 'anon_fcns' to have_fcn() to check for anonymous function
      capability to avoid direct MATLAB version checks in code.
    - GNU Octave compatibility!  (tested with Octave 3.2.3)
      Added 'octave' to have_fcn() to check when code is running under
      Octave instead of MATLAB.

3/23/09
    - Fixed bug in smart market code that caused it to die for cases with
      non-consecutive bus numbers.
    - Removed consecutive-bus number requirement for scale_load() and
      total_load() functions.


Changes since 4.0b1
-------------------

3/19/10
    - Released version 4.0b2.

3/12/10
    - Incorporated significant updates to User's Manual (docs/manual.pdf).

3/10/10
    - Added optional input arg to mpver() and other *ver() functions to
      trigger return of entire version struct with Name, Version,
      Release and Date (similar to MATLAB's ver() function).
    - Massive help text update to more closely match MathWorks conventions;
      function names in ALL CAPS, See also ..., Examples, etc.