@@ -15,6 +15,10 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.0b3
 -------------------
 
+5/13/10
+    - Modified input args for Hessian evaluation function for MIPS.
+      Requires cost_mult as 3rd argument.
+
 5/5/10
     - Added RETURN_RAW_DER option to control when OPF solver returns
       constraint, Jacobian and objective function gradient and Hessian
